<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_contacts_search_user_label"
        android:id="@+id/manageContactsSearchUserLabel"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="24dp"
        android:paddingTop="1dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/manageContactsSearchUserEditText"
        android:layout_below="@+id/manageContactsSearchUserLabel"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manageContactsSearchedUsersListView"
        android:layout_below="@+id/manageContactsSearchUserEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_above="@+id/hangoutButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manageContactsSearchIconImageView"
        android:src="@mipmap/manage_contacts_search_icon"
        android:layout_above="@+id/manageContactsSearchedUsersListView"
        android:layout_toLeftOf="@+id/manageContactsSearchUserEditText"
        android:layout_toStartOf="@+id/manageContactsSearchUserEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hangout_search"
        android:id="@+id/manageContactsSearchButton"
        android:layout_below="@+id/manageContactsSearchUserEditText"
        android:focusable="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/lets_hang_buttonshape"
        android:text="@string/create_hangout_lets_hang"
        android:id="@+id/hangoutButton"
        android:focusable="false"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#F2E7F1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>